# graph_db_interface

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: publish-to-pypi.yml  tests.yml
graph_db_interface/: __init__.py  exceptions.py  graph_db.py  graph_db_interface.py  sparql_query.py
graph_db_interface/kafka/: kafka_manager.py
graph_db_interface/queries/: named_graph.py  ontology_helpers.py  triple_multi.py  triple_single.py
graph_db_interface/queries/rdf4j/: graph_store.py
graph_db_interface/utils/: graph_db_credentials.py  iri.py  pretty_print.py  processing.py  typemap.py  types.py  utils.py  xsd_typemap.py
src/graph_db_interface/: graph_db_interface.py
tests/: conftest.py  test_graph_management.py  test_graph_manipulation.py  test_graph_store.py  test_initialization.py  test_iri.py  test_named_graph_management.py  test_triple_get.py  test_utils.py
